# python-companycam

./: .gitmodules  CHANGELOG.md  LICENSE  README.md  mypy.ini  pyproject.toml  requirements-pytest.txt  setup.cfg  tox.ini
.github/workflows/: test.yml
companycam/: __init__.py  api.py  client.py  exceptions.py  manager.py  models.py  types.py  utils.py
companycam/v2/: __init__.py  defaults.py  managers.py  models.py
docs/: contributing.md  usage.md
tests/: openapi.py  paths.py  test_client.py  test_companycam_api.py  test_companycam_exceptions.py  test_companycam_models.py  test_companycam_v2_defaults.py  test_companycam_v2_managers.py  test_companycam_v2_models.py  test_exceptions.py  test_manager.py  test_models.py  test_openapi.py  test_tests_paths.py  test_tests_utils.py  test_types.py  test_v2_defaults.py  test_v2_managers.py  test_v2_models.py  utils.py
tests/fixtures/: README.md  helpers.py  v2_2xx_responses.json  v2_model_objects.py
