[metadata]
name = companycam-unofficial
version = 0.1.1
description = Python client and bindings for CompanyCam API.
long_description = file: README.md
long_description_content_type = text/markdown
author = Elyas Khan
author_email = mail@ely.as
url = https://github.com/ely-as/python-companycam
project_urls =
    Source = https://github.com/ely-as/python-companycam
    Tracker = https://github.com/ely-as/python-companycam/issues
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Typing :: Typed

[options]
packages = find:
install_requires =
    httpx<1
    pydantic<2

[options.packages.find]
exclude =
    tests
